Fix z-index in menu and calendar day responsive

--- a/src/components/calendarDay/calendarDay.sass
+++ b/src/components/calendarDay/calendarDay.sass
@@ -2,9 +2,10 @@
 
 .calendar-day
     background-color: $white
-    border: 1px solid $normalBlue
+    outline: 1px solid $normalBlue
     cursor: pointer
     padding: 10px
+    min-width: 0
     &:nth-child(1)
         border-radius: 8px 0 0 0
     &:nth-child(7)
@@ -19,7 +20,6 @@
         text-overflow: ellipsis
         overflow: hidden
         white-space: nowrap
-        max-width: 100%
         background-color: $normalBlue
         padding: 2px 10px
         color: $white
