--- a/src/components/menu/menu.sass
+++ b/src/components/menu/menu.sass
@@ -9,6 +9,7 @@ nav
     justify-content: space-between
     position: sticky
     top: 0
+    z-index: 100
     .mobile-logo
         width: 50px
     .menu-container
